<resources>
    <string name="app_name">Tarefas Yo</string>
    <string name="login">LOGIN</string>
    <string name="email">email</string>
    <string name="password">senha</string>
    <string name="create_account">não tem uma conta? crie uma aqui</string>
    <string name="confirm_password">confirmar senha</string>
    <string name="unclassified_tasks">TAREFAS AVULSAS</string>
    <string name="save">Salvar</string>
    <string name="create">CRIAR</string>
    <string name="new_list">+ nova lista</string>
    <string name="no_priority">Sem Prioridade</string>
    <string name="low_priority">Baixa Prioridade</string>
    <string name="medium_priority">Média Prioridade</string>
    <string name="high_priority">Alta Prioridade</string>
    <string name="flag">flag</string>
    <string name="delete">delete</string>
    <string name="plus_new_list">+ nova lista</string>
    <string name="lists_menu">lists menu</string>
    <string name="home_menu">home</string>
    <string name="config">config</string>
    <string name="complete">Complete</string>
    <string name="completed">Completas</string>
    <string name="unclassified">avulsas</string>
</resources>
