<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/flag_dialog_background"
    android:backgroundTint="@color/blue_200"
    android:orientation="vertical"
    android:padding="5sp">

    <LinearLayout
        android:id="@+id/btn_white_flag"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/click_item_flag_dialog"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:paddingHorizontal="5sp">

        <TextView
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:paddingHorizontal="5sp"
            android:text="@string/no_priority"
            android:textColor="@color/white" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/flag"
            android:paddingHorizontal="5sp"
            android:src="@drawable/ic_flag_white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_green_flag"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/click_item_flag_dialog"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:paddingHorizontal="5sp">

        <TextView
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:paddingHorizontal="5sp"
            android:text="@string/low_priority"
            android:textColor="@color/white" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/flag"
            android:paddingHorizontal="5sp"
            android:src="@drawable/ic_flag_green" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_orange_flag"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/click_item_flag_dialog"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:paddingHorizontal="5sp">

        <TextView
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:paddingHorizontal="5sp"
            android:text="@string/medium_priority"
            android:textColor="@color/white" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/flag"
            android:paddingHorizontal="5sp"
            android:src="@drawable/ic_flag_orange" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_red_flag"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/click_item_flag_dialog"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:paddingHorizontal="5sp">

        <TextView
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:paddingHorizontal="5sp"
            android:text="@string/high_priority"
            android:textColor="@color/white" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/flag"
            android:paddingHorizontal="5sp"
            android:src="@drawable/ic_flag_red" />

    </LinearLayout>
</LinearLayout>